--- a/flask_server/templates/index.html
+++ b/flask_server/templates/index.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
+{% extends 'layout.html' %} {% block content %}
+{% if current_user.is_authenticated %}
+  Hi {{ current_user.login }}!
+{% endif %}
     <form class="post" method="post">
       <input type="text" placeholder="name" name="name">
       <input type="text" placeholder="post content" name="post">
@@ -15,5 +12,4 @@
       {{post.name + ': ' + post.content}}
     {% endfor %}
     </div>
-  </body>
-</html>
+{% endblock %}
