--- a/flask_server/templates/index.html
+++ b/flask_server/templates/index.html
@@ -1,15 +1,10 @@
 {% extends 'layout.html' %} {% block content %}
 {% if current_user.is_authenticated %}
-  Hi {{ current_user.login }}!
+  Hi {{ current_user.username }}!
 {% endif %}
-    <form class="post" method="post">
-      <input type="text" placeholder="name" name="name">
-      <input type="text" placeholder="post content" name="post">
-      <input type="submit" value="Submit">
-    </form>
-    {% for post in posts %}
-    <div class="message">
-      {{post.name + ': ' + post.content}}
-    {% endfor %}
-    </div>
+
+<nav>
+  <li><a href="/chat/1">messages</a></li>
+</nav>
+
 {% endblock %}
